--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-        <body>
-           <p>Radio check. Pilot, please confirm.</p>
-        </body>
+
+<body>
+        <p>Radio check. Pilot, please confirm.</p>
+        <p>Pilot confirmed.</p>
+</body>
+
 </html>
