--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
 <body>
         <p>Radio check. Pilot, please confirm.</p>
         <p>Pilot confirmed.</p>
-<<<<<<< HEAD
         <p>Are we ready for take off?</p>
-=======
-        <p>Are we still working?</p>
->>>>>>> 573ff76aa4e943a877b6568c5048aff9af71323f
+        <p>I hope this works</p>
 </body>
 
 </html>
