--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-
+    <head>
+        <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
 <body>
         <p>Radio check. Pilot, please confirm.</p>
         <p>Pilot confirmed.</p>
