I added some fancy stylings

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+
+<head>
         <link rel="stylesheet" type="text/css" href="style.css">
-    </head>
+        <link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
+</head>
+
 <body>
         <h1>Dun dun dun</h1>
         <p>Radio check. Pilot, please confirm.</p>
